2002-01-24  Jeff Hobbs  <jeffh@ActiveState.com>

	**** TKCON 2.3 RELEASE ****

	* tkcon.tcl: bumped to v2.3

2002-01-23  Jeff Hobbs  <jeffh@ActiveState.com>

	* docs/procs.html:
	* tkcon.tcl (what): changed to differentiate between 'array' and
	'scalar' instead of just returning 'variable'.
	(which): called what in uplevel to get scope right.

2002-01-22  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl (ExpandPathname): use a safer regsub to first unescape
	the str, then to protect it in the glob.
	(dir): Use -directory arg in 8.3+ for better results.

	* docs/idebug.html: added note about ? help at debug prompt.

	* tkcon.tcl (dir): prevented possible 'divide by zero' error.
	[Bug #496584]
	(Expand*): fixed ExpandPathname to better handle spaced pathnames.
	[Bug #497079]

2001-12-14  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl: 'tkcon show' causes loss of focus on Windows, so an
	extra focus to the console was added.

2001-12-12  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl (EvalSocketEvent): changed EvalSocketClosed to only
	occur after gets, then eof check. (Gerold Jury)

2001-11-14  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl: added catch around file type call

2001-10-14  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl (Init): corrected loading of rcfile when it was in a
	path including spaces. (siltberg)
	(About): clarified CVS info in about box.

	* docs/start.html: correct old refs to TKCON var.

2001-09-28  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl (ExpandPathname): recognize NT as a case *in*sensitive
	file system for pathname expansion.

2001-08-31  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl (InitSlave): propagate auto_path from master to slave.

2001-08-24  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl (NewSocket, NewDisplay): when nothing is specified,
	just return.
	(Display): fixed connecting to interps on other displays.

2001-08-22  Jeff Hobbs  <jeffh@ActiveState.com>
